--- a/src/app/@themes/component/header/header.component.html
+++ b/src/app/@themes/component/header/header.component.html
@@ -8,12 +8,28 @@
   </div>
 </div>
 <div class="banner">
-  <div class="logo">
-    <img src="../../../../assets/images/text-1663342200227.png" alt="">
-    <div class="slogan">
-      <span>Mang những bữa cơm ngon đến với mọi nhà</span>
-    </div>
+  <div class="carousel">
+    <nz-carousel [nzEffect]="'fade'" nzAutoPlay="true" nzDots="false" nzEffect="fade" nzAutoPlaySpeed="5000">
+      <div nz-carousel-content>
+        <img src="../../../../assets/images/slide-1.webp" alt="">
+      </div>
+      <div nz-carousel-content>
+        <img src="../../../../assets/images/slide-2.webp" alt="">
+      </div>
+      <div nz-carousel-content>
+        <img src="../../../../assets/images/slide-3.webp" alt="">
+      </div>
+    </nz-carousel>
   </div>
+</div>
+<div class="logo">
+  <img src="../../../../assets/images/text-1663342200227.png" alt="">
+  <hr>
+  <div class="slogan">
+    <span>Cửa Hàng Thực Phẩm Sạch</span>
+  </div>
+</div>
+<div class="border-clear-fix">
 </div>
 <div class="nab-bar">
   <div class="main-menu">
@@ -21,9 +37,9 @@
       <a [routerLink]="['']" routerLinkActive="active-nab-bar" [routerLinkActiveOptions]="{ exact: true }"><li>Trang chủ</li></a>
       <a [routerLink]="['']" routerLinkActive="active-nab-bar" [routerLinkActiveOptions]="{ exact: true }"><li>Giới thiệu</li></a>
       <a [routerLink]="['']" routerLinkActive="active-nab-bar" [routerLinkActiveOptions]="{ exact: true }"><li>Sản phẩm</li></a>
-      <a [routerLink]="['']" routerLinkActive="active-nab-bar" [routerLinkActiveOptions]="{ exact: true }"><li>Không gian quán</li></a>
-      <a [routerLink]="['']" routerLinkActive="active-nab-bar" [routerLinkActiveOptions]="{ exact: true }"><li>Thực đơn</li></a>
-      <a [routerLink]="['']" routerLinkActive="active-nab-bar" [routerLinkActiveOptions]="{ exact: true }"><li>Vào Bếp</li></a>
+      <a [routerLink]="['']" routerLinkActive="active-nab-bar" [routerLinkActiveOptions]="{ exact: true }"><li>Tin tức</li></a>
+      <a [routerLink]="['']" routerLinkActive="active-nab-bar" [routerLinkActiveOptions]="{ exact: true }"><li>Tư vấn</li></a>
+      <a [routerLink]="['']" routerLinkActive="active-nab-bar" [routerLinkActiveOptions]="{ exact: true }"><li>Dịch vụ</li></a>
       <a [routerLink]="['']" routerLinkActive="active-nab-bar" [routerLinkActiveOptions]="{ exact: true }"><li>Liên hệ</li></a>
     </ul>
   </div>
