--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
 <router-outlet></router-outlet>
-<app-loading></app-loading>
+<ngx-spinner type="ball-clip-rotate" color="#fff" bdColor = "rgba(0, 0, 0, 0.3)"></ngx-spinner>
