--- a/src/app/page/page.component.scss
+++ b/src/app/page/page.component.scss
@@ -4,8 +4,9 @@
   }
 
   .content {
-    height: calc(100vh - 55px);
-    width: 100%;
+    // min-height: calc(100vh - 55px);
+    width: 60%;
+    margin: auto;
 
     // .footer {
     //   position: fixed;
