--- a/src/theme.less
+++ b/src/theme.less
@@ -7,6 +7,8 @@
 // View all variables: https://github.com/NG-ZORRO/ng-zorro-antd/blob/master/components/style/themes/default.less
 
 @primary-color: #1dc483;
+// @pagination-item-bg: #1dc483;
+// @pagination-item-bg-active: #1dc483;
 @btn-border-radius-base: 30px;
 ::-webkit-scrollbar {
   width: 7px;
