--- a/src/app/@themes/component/header/header.component.html
+++ b/src/app/@themes/component/header/header.component.html
@@ -33,4 +33,29 @@
     </div>
   </div>
 </div>
-
+<div class="nav-bar-container">
+  <ul>
+    <li>
+      <a [routerLink]="['']" routerLinkActive="highlight">TRANG CHỦ</a>
+    </li>
+    <li>
+      <a class="" [routerLink]="['']" routerLinkActive="highlight">SẢN PHẨM HOT</a>
+    </li>
+    <li>
+      <a [routerLink]="['']" routerLinkActive="highlight">SALE</a>
+    </li>
+    <li>
+      <a [routerLink]="['']" routerLinkActive="highlight">ĐỒNG HỒ NỮ</a>
+    </li>
+    <li>
+      <a [routerLink]="['']" routerLinkActive="highlight">ĐỒNG HỒ NAM</a>
+    </li>
+    <li>
+      <a [routerLink]="['']" routerLinkActive="highlight">BRANDS</a>
+    </li>
+    <li>
+      <a [routerLink]="['']" routerLinkActive="highlight">LIÊN HỆ</a>
+    </li>
+    <li><a [routerLink]="['']" routerLinkActive="highlight">GIỚI THIỆU</a></li>
+  </ul>
+</div>
