--- a/src/app/page/page.component.scss
+++ b/src/app/page/page.component.scss
@@ -5,8 +5,8 @@
 
   .content {
     // min-height: calc(100vh - 55px);
-    width: 60%;
-    margin: auto;
+    // width: 60%;
+    // margin: auto;
 
     // .footer {
     //   position: fixed;
