--- a/src/app/@themes/component/header/header.component.scss
+++ b/src/app/@themes/component/header/header.component.scss
@@ -78,7 +78,7 @@
 .nav-bar-container {
   background-color: #353535;
   font-weight: 600;
-  position: sticky;
+  // position: sticky;
 
   ul {
     list-style-type: none;
