--- a/src/app/main/home/banner/banner.component.html
+++ b/src/app/main/home/banner/banner.component.html
@@ -19,14 +19,81 @@
       <div class="image-container">
         <img src="../../../../assets/images/slider1.jpg" alt="">
       </div>
-      <div class="content-container"></div>
+      <div class="content-container">
+        <div class="content">
+          <h6>BỘ SƯU TẬP ĐỒNG HỒ</h6>
+          <h3><strong>Trường tồn với thời gian</strong></h3>
+          <p>Đồng hồ được chế tác từ các nguyên liệu tốt nhất và lắp ráp tỉ mỉ đến từng chi tiết. Mỗi chi tiết được thiết kế, phát triển, và sản xuất với tiêu chuẩn chính xác nhất.</p>
+        </div>
+        <div class="button">
+          <button class="button-banner">MUA NGAY</button>
+        </div>
+      </div>
     </div>
     <div nz-carousel-content>
       <div class="image-container">
         <img src="../../../../assets/images/slider2.jpg" alt="">
       </div>
+      <div class="content-container-slide-two">
+        <div class="content">
+          <h6>DÀNH RIÊNG CHO DOANH NHÂN</h6>
+          <h3><strong>Đẳng cấp là mãi mãi</strong></h3>
+          <p>Bộ sưu tập với các mẫu đồng hồ Rolex cổ điển gồm các kiểu dáng kết hợp những bí quyết của Rolex và những tiêu chuẩn cao nhất của sự hoàn hảo.</p>
+        </div>
+      </div>
+    </div>
+    <div nz-carousel-content>
+      <div class="image-container">
+        <img src="../../../../assets/images/slider3-3.jpg" alt="">
+      </div>
+      <div class="content-container-slide-two">
+        <div class="content">
+          <h6>DÀNH RIÊNG CHO DOANH NHÂN</h6>
+          <h3><strong>Đẳng cấp là mãi mãi</strong></h3>
+          <p>Bộ sưu tập với các mẫu đồng hồ Rolex cổ điển gồm các kiểu dáng kết hợp những bí quyết của Rolex và những tiêu chuẩn cao nhất của sự hoàn hảo.</p>
+        </div>
+      </div>
     </div>
   </nz-carousel>
   <button class="button-prev" (click)="goPrevSlide()"><span nz-icon nzType="left" nzTheme="outline"></span></button>
   <button class="button-next" (click)="goNextSlide()"><span nz-icon nzType="right" nzTheme="outline"></span></button>
+</div>
+<div class="banner-container-two">
+  <div class="banner-left">
+    <div class="image-container">
+      <img src="../../../../assets/images/banner-4.jpg" alt="">
+    </div>
+    <div class="content-container">
+      <h1>ĐỒNG HỒ CỔ ĐIỂN</h1>
+      <p>Phong cách trường tồn, có thể được nhận biết trong nháy mắt.</p>
+      <div class="button">
+        <button class="button-banner">XEM THÊM</button>
+      </div>
+    </div>
+  </div>
+  <div class="banner-center">
+    <div class="center-top">
+      <div class="image-container">
+        <img src="../../../../assets/images/banner-3.jpg" alt="">
+      </div>
+      <div class="content-container"></div>
+    </div>
+    <div class="center-bottom">
+      <div class="image-container">
+        <img src="../../../../assets/images/banner-2.jpg" alt="">
+      </div>
+    </div>
+  </div>
+  <div class="banner-right">
+    <div class="image-container">
+      <img src="../../../../assets/images/banner-1.jpg" alt="">
+    </div>
+    <div class="content-container">
+      <h1><strong>ĐỒNG HỒ CHẤT</strong></h1>
+      <p>Kết hợp hoàn hảo tính năng ưu việt và phòng cách đẳng cấp.</p>
+      <div class="button">
+        <button class="button-banner">MUA NGAY</button>
+      </div>
+    </div>
+  </div>
 </div>
