add component list product

--- a/src/app/main/home/banner/banner.component.html
+++ b/src/app/main/home/banner/banner.component.html
@@ -14,7 +14,7 @@
       </div>
     </ng-template>
   </swiper> -->
-  <nz-carousel [nzDots]="false">
+  <nz-carousel [nzDots]="false" [nzAutoPlay]="true" [nzAutoPlaySpeed]="20000">
     <div nz-carousel-content>
       <div class="image-container">
         <img src="../../../../assets/images/slider1.jpg" alt="">
@@ -76,7 +76,12 @@
       <div class="image-container">
         <img src="../../../../assets/images/banner-3.jpg" alt="">
       </div>
-      <div class="content-container"></div>
+      <div class="content-container">
+        <h2>Bộ sưu tập năm 2019</h2>
+        <div class="button">
+          <button class="button-banner">XEM THÊM</button>
+        </div>
+      </div>
     </div>
     <div class="center-bottom">
       <div class="image-container">
