--- a/src/app/main/home/banner/banner.component.scss
+++ b/src/app/main/home/banner/banner.component.scss
@@ -264,6 +264,7 @@
   display: flex;
   width: 100%;
   height: 576px;
+  margin-bottom: 60px;
 
   .banner-left {
     flex: 1;
@@ -288,7 +289,7 @@
         font-weight: bold;
         color: #fff;
         margin-bottom: 0;
-        font-size: 24px;
+        font-size: 30px;
         letter-spacing: 0.05em;
       }
 
@@ -312,6 +313,7 @@
     flex: 1;
 
     .center-top {
+      position: relative;
 
       .image-container {
         overflow: hidden;
@@ -320,6 +322,18 @@
           width: 100%;
           object-fit: cover;
           transition: 0.6s transform;
+        }
+      }
+
+      .content-container {
+        position: absolute;
+        top: 30%;
+        left: 27%;
+        text-align: center;
+
+        h2 {
+          color: #fff;
+          font-weight: bold;
         }
       }
     }
@@ -357,6 +371,8 @@
 
   .banner-right {
     flex: 1;
+    position: relative;
+
     .image-container {
       overflow: hidden;
       img {
@@ -364,6 +380,26 @@
         width: 100%;
         object-fit: cover;
         transition: 0.6s transform;
+      }
+    }
+
+    .content-container {
+      position: absolute;
+      top: 68%;
+      left: 5%;
+
+      h1 {
+        font-weight: bold;
+        color: #fff;
+        margin-bottom: 0;
+        font-size: 30px;
+        letter-spacing: 0.05em;
+      }
+
+      p {
+        color: #fff;
+        margin-bottom: 8.5px;
+        font-size: 14.5px;
       }
     }
   }
