add special edittion

--- a/src/app/main/home/home.component.html
+++ b/src/app/main/home/home.component.html
@@ -1,2 +1,4 @@
 <app-banner></app-banner>
 <app-products></app-products>
+<app-product-carousel></app-product-carousel>
+<app-new-blog></app-new-blog>
