--- a/src/theme.less
+++ b/src/theme.less
@@ -33,11 +33,10 @@
 }
 
 .ant-btn-primary:hover {
-  background-color: #665e4f;
+  background-color: #a2957d;
 }
 
 .ant-btn-primary {
-  font-size: 16px;
   letter-spacing: 0.03em;
   cursor: pointer;
   text-align: center;
@@ -45,7 +44,7 @@
   border: 1px solid transparent;
   border-radius: 0;
   text-shadow: none;
-  display: block;
+  background-color: #cbba9c;
 }
 
 .ant-input {
