--- a/src/app/main/home/products/products.component.scss
+++ b/src/app/main/home/products/products.component.scss
@@ -8,7 +8,7 @@
 
   h1 {
     font-weight: bold;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'arial black', sans-serif;;
     color: #cbba9c;
     font-size: 50px;
 
@@ -19,5 +19,77 @@
 
   .gap-element {
     padding-top: 30px;
+  }
+
+  .list-product-feature {
+    width: calc(120rem - 733px);
+    margin: auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+
+    .card-container {
+      background-color: #fff;
+      width: 31.33%;
+      margin-bottom: 62px;
+      transition: transform 0.6s, box-shadow 0.6s;
+      position: relative;
+      cursor: pointer;
+
+      .image {
+        img {
+          width: 100%;
+          height: 100%;
+        }
+      }
+
+      .price-box {
+        padding: 10px 10px 20px 10px;
+
+        h5 {
+          font-weight: bold;
+        }
+
+        .price-warraper {
+          span {
+            font-weight: bold;
+            font-size: 16px;
+          }
+        }
+      }
+
+      .sale-container {
+        position: absolute;
+        top: 10%;
+        left: -8px;
+        padding: 10px 7px;
+        border: #cbba9c 1px solid;
+        border-radius: 50%;
+        background-color: #cbba9c;
+        color: #fff;
+        font-weight: bold;
+        font-size: 16px;
+      }
+
+      .sale-padding {
+        padding: 10px 2px;
+      }
+    }
+
+    .card-container:hover {
+      box-shadow: 0px 30px 40px 0px rgb(0 0 0 / 20%);
+      transform: translateY(-6px);
+    }
+
+    .lỉne-through {
+      font-weight: 500 !important;
+      text-decoration: line-through;
+    }
+  }
+
+  .text-ellipsis {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 }
