--- a/src/app/@themes/component/header/header.component.html
+++ b/src/app/@themes/component/header/header.component.html
@@ -30,6 +30,9 @@
     <div class="cart">
       <span class="cart-price">{{ totalPrice }}&nbsp;đ</span>
       <span class="cart-icon"><strong>{{ totalItem }}</strong></span>
+      <div class="dropdown-cart">
+
+      </div>
     </div>
   </div>
 </div>
