--- a/src/app/@themes/component/header/header.component.scss
+++ b/src/app/@themes/component/header/header.component.scss
@@ -62,7 +62,49 @@
 
     .cart {
       margin-left: 13px;
-      font-size: 16px;
+      font-size: 14px;
+
+      .cart-price {
+        font-weight: bold;
+      }
+
+      .cart-icon {
+        margin-left: 20px;
+        cursor: pointer;
+        position: relative;
+
+        strong {
+          padding: 2px 7px;
+          border: 2px solid #cbba9c;
+          color: #cbba9c;
+        }
+
+        strong::after {
+          transition: height 0.1s ease-out;
+          bottom: 114%;
+          margin-left: -7px;
+          height: 8px;
+          width: 14px;
+          content: " ";
+          left: 50%;
+          position: absolute;
+          pointer-events: none;
+          border: 2px solid #cbba9c;
+          border-top-left-radius: 99px;
+          border-top-right-radius: 99px;
+          border-bottom: 0;
+        }
+      }
+
+      .cart-icon:hover {
+        strong {
+          background-color: #cbba9c;
+          color: #fff;
+        }
+        strong::after {
+          height: 9px;
+        }
+      }
     }
 
     .header-divider {
