--- a/src/app/main/home/new-blog/new-blog.component.html
+++ b/src/app/main/home/new-blog/new-blog.component.html
@@ -2,4 +2,7 @@
   <h2>HAPPENINGS AROUND</h2>
   <h1>OUR <span>BLOG</span></h1>
   <div class="gap-element"></div>
+  <nz-carousel>
+    <div nz-carousel-content></div>
+  </nz-carousel>
 </div>
