--- a/src/app/@themes/component/header/header.component.html
+++ b/src/app/@themes/component/header/header.component.html
@@ -24,7 +24,7 @@
     </div>
     <div class="header-divider"></div>
     <div class="icon-user">
-      <i class="fa fa-user" aria-hidden="true"></i>
+      <span nz-icon nzType="user" nzTheme="outline"></span>
     </div>
     <div class="header-divider"></div>
     <div class="cart">
