--- a/src/app/@themes/component/footer/footer.component.html
+++ b/src/app/@themes/component/footer/footer.component.html
@@ -1,6 +1,53 @@
 <div class="footer-container">
-  <div class="logo"></div>
-  <div class="contact"></div>
-  <div class="Follow"></div>
-  <div class="register"></div>
+  <div class="content">
+    <div class="logo">
+      <img src="../../../../assets/images/logo-watch-white-2.png" alt="">
+    </div>
+    <div class="contact">
+      <div class="locate">
+        <div class="icon">
+          <i class="fa fa-map-marker" aria-hidden="true"></i>
+        </div>
+        <div class="text">
+          <span>319 C16 Lý Thường Kiệt, Phường 15, Quận 11, Tp.HCM</span>
+        </div>
+      </div>
+      <div class="phone">
+        <div class="icon">
+          <i class="fa fa-phone" aria-hidden="true"></i>
+        </div>
+        <div class="text">
+          <a href="tel:0367377769">0367377769</a>
+        </div>
+      </div>
+      <div class="mail">
+        <div class="icon">
+          <span nz-icon nzType="mail" nzTheme="outline"></span>
+        </div>
+        <div class="text">
+          <a href="mailto:jusehoang1999@gmail.com"></a>
+        </div>
+      </div>
+      <div class="skype">
+        <div class="icon">
+          <span nz-icon nzType="skype" nzTheme="fill"></span>
+        </div>
+        <div class="text">
+          <span>jusehoang</span>
+        </div>
+      </div>
+    </div>
+    <div class="follow">
+      <h2>FOLLOW US</h2>
+      <p>Follow để không bỏ lỡ bất kì ưu đãi nào từ chúng tôi.</p>
+      <div class="icon-group">
+        <i class="fa fa-facebook" aria-hidden="true"></i>
+        <i class="fa fa-instagram" aria-hidden="true"></i>
+        <i class="fa fa-twitter" aria-hidden="true"></i>
+        <i class="fa fa-pinterest-p" aria-hidden="true"></i>
+        <i class="fa fa-youtube-play" aria-hidden="true"></i>
+      </div>
+    </div>
+    <div class="register"></div>
+  </div>
 </div>
