--- a/src/app/main/home/product-carousel/product-carousel.component.html
+++ b/src/app/main/home/product-carousel/product-carousel.component.html
@@ -9,7 +9,7 @@
             <div class="image">
               <img [src]="product.image" [alt]="product.name">
             </div>
-            <div class="sale-container" *ngIf="product.isSale" [class.sale-padding]="product.percentSale || 0 > 10">
+            <div class="sale-container" *ngIf="product.isSale" [class.sale-padding]="(product.percentSale || 0) > 10">
               <span>-{{ product.percentSale }}%</span>
             </div>
             <div class="button-prev">
