--- a/src/app/main/home/products/products.component.html
+++ b/src/app/main/home/products/products.component.html
@@ -7,7 +7,7 @@
       <div class="image">
         <img [src]="product.image" [alt]="product.name">
       </div>
-      <div class="sale-container" *ngIf="product.isSale" [class.sale-padding]="product.percentSale || 0 >= 10">
+      <div class="sale-container" *ngIf="product.isSale" [class.sale-padding]="(product.percentSale || 0) >= 10">
         <span>-{{ product.percentSale }}%</span>
       </div>
       <div class="price-box">
