--- a/src/app/@themes/component/footer/footer.component.html
+++ b/src/app/@themes/component/footer/footer.component.html
@@ -48,6 +48,10 @@
         <i class="fa fa-youtube-play" aria-hidden="true"></i>
       </div>
     </div>
-    <div class="register"></div>
+    <div class="register">
+      <h1>ĐĂNG KÝ</h1>
+      <p>Đăng ký để nhận được thông tin mới nhất từ chúng tôi</p>
+      <input type="text" placeholder="Email ...">
+    </div>
   </div>
 </div>
