--- a/src/app/@themes/component/footer/footer.component.html
+++ b/src/app/@themes/component/footer/footer.component.html
@@ -51,7 +51,12 @@
     <div class="register">
       <h1>ĐĂNG KÝ</h1>
       <p>Đăng ký để nhận được thông tin mới nhất từ chúng tôi</p>
-      <input type="text" placeholder="Email ...">
+      <div class="register">
+        <input type="text" placeholder="Email ...">
+        <div class="icon">
+          <i class="fa fa-paper-plane" aria-hidden="true"></i>
+        </div>
+      </div>
     </div>
   </div>
 </div>
