--- a/src/app/@themes/component/footer/footer.component.html
+++ b/src/app/@themes/component/footer/footer.component.html
@@ -25,7 +25,7 @@
           <span nz-icon nzType="mail" nzTheme="outline"></span>
         </div>
         <div class="text">
-          <a href="mailto:jusehoang1999@gmail.com"></a>
+          <a href="mailto:jusehoang1999@gmail.com">jusehoang1999@gmail.com</a>
         </div>
       </div>
       <div class="skype">
@@ -41,17 +41,27 @@
       <h2>FOLLOW US</h2>
       <p>Follow để không bỏ lỡ bất kì ưu đãi nào từ chúng tôi.</p>
       <div class="icon-group">
-        <i class="fa fa-facebook" aria-hidden="true"></i>
-        <i class="fa fa-instagram" aria-hidden="true"></i>
-        <i class="fa fa-twitter" aria-hidden="true"></i>
-        <i class="fa fa-pinterest-p" aria-hidden="true"></i>
-        <i class="fa fa-youtube-play" aria-hidden="true"></i>
+        <a [routerLink]="">
+          <i class="fa fa-facebook" aria-hidden="true"></i>
+        </a>
+        <a [routerLink]="">
+          <i class="fa fa-instagram" aria-hidden="true"></i>
+        </a>
+        <a [routerLink]="">
+          <i class="fa fa-twitter" aria-hidden="true"></i>
+        </a>
+        <a [routerLink]="">
+          <i class="fa fa-pinterest-p" aria-hidden="true"></i>
+        </a>
+        <a [routerLink]="">
+          <i class="fa fa-youtube-play" aria-hidden="true"></i>
+        </a>
       </div>
     </div>
     <div class="register">
-      <h1>ĐĂNG KÝ</h1>
+      <h2>ĐĂNG KÝ</h2>
       <p>Đăng ký để nhận được thông tin mới nhất từ chúng tôi</p>
-      <div class="register">
+      <div class="register-form">
         <input type="text" placeholder="Email ...">
         <div class="icon">
           <i class="fa fa-paper-plane" aria-hidden="true"></i>
