--- a/src/app/@themes/component/footer/footer.component.scss
+++ b/src/app/@themes/component/footer/footer.component.scss
@@ -1,17 +1,91 @@
 .footer-container {
   background-image: url('../../../../assets/images/slider1.jpg');
-  background-size: 100% 100%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
 
   .content {
+    padding: 30px 0;
     width: calc(120rem - 733px);
     margin: auto;
     display: flex;
-    
+    background-color: rgba($color: #000000, $alpha: 0.75);
+    font-size: 16px;
+
     .logo {
+      flex: 1;
+      padding: 30px 60px 30px 0;
+      height: 230px;
+
       img {
         width: 100%;
         height: 100%;
       }
     }
+
+    .contact {
+      flex: 1;
+      padding: 30px 5px;
+
+      .locate, .phone, .mail, .skype {
+        display: flex;
+        padding: 5px 0;
+
+        .icon {
+          color: #fff;
+          width: 10%;
+        }
+
+        .text {
+          width: 90%;
+          span {
+            color: #a4a4a4;
+          }
+        }
+      }
+
+      a {
+        color: #a4a4a4;
+      }
+
+      a:hover {
+        color: #7ca740 !important;
+      }
+    }
+
+    .follow {
+      flex: 1;
+      padding: 30px 5px;
+
+      h2 {
+        color: #fff;
+        font-weight: bold;
+      }
+
+      a {
+        color: #a4a4a4;
+        font-size: 30px;
+        bottom: 0;
+        padding: 0 10px;
+      }
+
+      a:hover {
+        color: #7ca740 !important;
+      }
+    }
+
+    .register {
+      flex: 1;
+      padding: 30px 5px;
+
+      h2 {
+        color: #fff;
+        font-weight: bold;
+      }
+    }
+  }
+
+  p {
+    color: #a4a4a4;
   }
 }
