--- a/src/app/@themes/component/footer/footer.component.scss
+++ b/src/app/@themes/component/footer/footer.component.scss
@@ -82,6 +82,30 @@
         color: #fff;
         font-weight: bold;
       }
+
+      .register-form {
+        position: relative;
+
+        input {
+          width: 100%;
+          padding: 5px;
+          border: 1px solid #ddd;
+          border-radius: 3px;
+          border-right: 0;
+          box-shadow: inset 0 1px 2px rgb(0 0 0 / 0%);
+          outline: none;
+        }
+
+        .icon {
+          position: absolute;
+          top: 6px;
+          right: 6px;
+          .fa {
+            color: #7ca740;
+            cursor: pointer;
+          }
+        }
+      }
     }
   }
 
