--- a/src/app/main/home/new-blog/new-blog.component.scss
+++ b/src/app/main/home/new-blog/new-blog.component.scss
@@ -2,6 +2,7 @@
   text-align: center;
   background-color: rgb(250, 250, 250);
   padding: 60px 0 30px 0;
+  position: relative;
 
   h2 {
     font-weight: bold;
@@ -10,7 +11,7 @@
 
   h1 {
     font-weight: bold;
-    font-family: 'arial black', sans-serif;;
+    font-family: 'arial black', sans-serif;
     color: #cbba9c;
     font-size: 50px;
 
@@ -21,5 +22,165 @@
 
   .gap-element {
     padding-top: 30px;
+  }
+
+  nz-carousel {
+    width: calc(120rem - 733px);
+    margin: auto;
+    height: 600px;
+    cursor: grab;
+
+    [nz-carousel-content] {
+      overflow: hidden;
+    }
+
+    .content-container {
+      display: flex;
+      width: 100%;
+      justify-content: space-between;
+      text-align: start;
+
+      .card {
+        width: 31%;
+        display: flex;
+        flex-direction: column;
+        cursor: pointer;
+        box-shadow: 0 5px 20px rgb(0 0 0 / 10%);
+        border: 1px solid #ddd;
+
+        .image {
+          overflow: hidden;
+
+          img {
+            width: 100%;
+            height: 300px;
+            transition: transform 0.6s;
+          }
+        }
+
+        .image:hover {
+          img {
+            transform: scale(1.1);
+          }
+        }
+
+        .card-content {
+          padding: 15px 15px 5px 15px;
+
+          h2 {
+            font-size: 23px;
+            font-weight: bold;
+            display: -webkit-box;
+            -webkit-box-orient: vertical;
+            -webkit-line-clamp: 2;
+            text-transform: uppercase;
+            margin-bottom: 0;
+            overflow: hidden;
+            text-overflow: ellipsis;
+          }
+
+          span {
+            font-weight: bold;
+            font-size: 12px;
+          }
+
+          .didiver {
+            height: 1px;
+            width: 50px;
+            margin: 5px 0;
+            background-color: #ddd;
+          }
+
+          p {
+            display: -webkit-box;
+            -webkit-box-orient: vertical;
+            -webkit-line-clamp: 2;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            font-weight: bold;
+            font-size: 16px;
+          }
+
+          .button {
+            margin-bottom: 15px;
+
+            button {
+              color: #000;
+              border: 2px solid #cbba9c;
+              padding: 12px 30px;
+              font-size: 0.9em;
+              background-color: #fff;
+              font-weight: bold;
+              text-transform: uppercase;
+              cursor: pointer;
+              position: relative;
+              transition: all 0.4s;
+
+              span {
+                font-size: 10px;
+              }
+            }
+
+            button:hover::after {
+              content: '';
+              position: absolute;
+              border: 2px solid #cbba9c;
+              top: 4px;
+              right: 4px;
+              bottom: 4px;
+              left: 4px;
+            }
+
+            button:hover {
+              background-color: #000;
+              color: #fff;
+            }
+          }
+        }
+      }
+    }
+  }
+
+  .button-prev {
+    position: absolute;
+    left: 16%;
+    top: 57%;
+    opacity: 0;
+
+    button {
+      background: none;
+      outline: none;
+      border: none;
+      cursor: pointer;
+
+      span {
+        font-size: 26px;
+      }
+    }
+
+    button:hover {
+      color: #cbba9c;
+    }
+  }
+
+  .button-next {
+    position: absolute;
+    right: 16%;
+    top: 57%;
+
+    button {
+      background: none;
+      outline: none;
+      border: none;
+      cursor: pointer;
+
+      span {
+        font-size: 26px;
+      }
+    }
+
+    button:hover {
+      color: #cbba9c;
+    }
   }
 }
