--- a/src/app/main/home/products/products.component.scss
+++ b/src/app/main/home/products/products.component.scss
@@ -74,11 +74,64 @@
       .sale-padding {
         padding: 10px 2px;
       }
+
+      button {
+        background-color: #fff;
+        outline: none;
+        border: none;
+        position: absolute;
+        top: 72%;
+        left: 0;
+        opacity: 0;
+        transition: opacity 0.6s;
+      }
+
+      .cart-icon {
+        margin-left: 20px;
+        cursor: pointer;
+        position: relative;
+
+        strong {
+          padding: 0 6px;
+          border: 2px solid #cbba9c;
+          color: #cbba9c;
+        }
+
+        strong::after {
+          transition: height 0.1s ease-out;
+          bottom: 105%;
+          margin-left: -7px;
+          height: 8px;
+          width: 14px;
+          content: " ";
+          left: 50%;
+          position: absolute;
+          pointer-events: none;
+          border: 2px solid #cbba9c;
+          border-top-left-radius: 99px;
+          border-top-right-radius: 99px;
+          border-bottom: 0;
+        }
+      }
+
+      .cart-icon:hover {
+        strong {
+          background-color: #cbba9c;
+          color: #fff;
+        }
+        strong::after {
+          height: 9px;
+        }
+      }
     }
 
     .card-container:hover {
       box-shadow: 0px 30px 40px 0px rgb(0 0 0 / 20%);
       transform: translateY(-6px);
+
+      button {
+        opacity: 1;
+      }
     }
 
     .lỉne-through {
