--- a/src/app/main/search/search.component.html
+++ b/src/app/main/search/search.component.html
@@ -1,10 +1,10 @@
-<div class="breadcrum">
+<div class="breadcrumb">
   <div class="left">
-    <ul>
-      <li *ngFor="let breadcrumb of breadcumbs">
+    <nz-breadcrumb>
+      <nz-breadcrumb-item *ngFor="let breadcrumb of breadcrumbs">
         <a [routerLink]="breadcrumb.routerLink">{{ breadcrumb.content }}</a>
-      </li>
-    </ul>
+      </nz-breadcrumb-item>
+    </nz-breadcrumb>
   </div>
   <div class="right">
     <span>Hiển thị kết quả tìm kiếm duy nhất</span>
@@ -17,4 +17,38 @@
       <option value="">Theo Tên: Từ Z-A</option>
     </select>
   </div>
+</div>
+<div class="search-container">
+  <div class="left">
+    <h3>Danh mục sản phẩm</h3>
+    <ul>
+      <li *ngFor="let category of categorys">
+        <a [routerLink]="category.routerLink" routerLinkActive="active-link" [routerLinkActiveOptions]="{ exact: true }">{{ category.name }}</a>
+      </li>
+    </ul>
+    <div class="slider-container">
+      <h3>Lọc theo giá</h3>
+      <nz-slider nzRange [(ngModel)]="searchPrice" [nzMin]="priceMin" [nzMax]="priceMax"></nz-slider>
+      <div class="show">
+        <div class="button">
+          <button>Lọc</button>
+        </div>
+        <div class="show-price-search">
+          <p>Giá <b>{{ searchPrice[0] | currencyPipe }}</b> — <b>{{ searchPrice[1] | currencyPipe }}</b></p>
+        </div>
+      </div>
+    </div>
+    <div class="product-relative">
+      <h3>Quan tâm</h3>
+      <ul>
+        <li *ngFor="let product of productRelatives">
+          <div class="image">
+            <img [src]="product.image" [alt]="product.name">
+          </div>
+          <div class="text-container"></div>
+        </li>
+      </ul>
+    </div>
+  </div>
+  <div class="right"></div>
 </div>
