--- a/src/app/main/search/search.component.scss
+++ b/src/app/main/search/search.component.scss
@@ -84,6 +84,7 @@
 
     .slider-container {
       padding: 10px 0;
+
       .ant-slider {
         color: #333;
       }
@@ -129,12 +130,182 @@
 
     .product-relative {
       ul {
+        li {
+          display: flex;
+          padding: 5px;
 
+          .image {
+            width: 25%;
+
+            img {
+              width: 70px;
+              height: 70px;
+            }
+          }
+
+          .text-container {
+            width: 75%;
+            padding-left: 5px;
+
+            h5 {
+              font-size: 15px;
+              font-weight: bold;
+              display: -webkit-box;
+              -webkit-box-orient: vertical;
+              -webkit-line-clamp: 2;
+              text-transform: uppercase;
+              margin-bottom: 0;
+              overflow: hidden;
+              text-overflow: ellipsis;
+            }
+
+            .price-warraper {
+              span {
+                font-weight: bold;
+                font-size: 16px;
+              }
+
+              .line-through {
+                text-decoration: line-through;
+              }
+            }
+          }
+        }
       }
     }
   }
 
   .right {
     width: 75%;
+    padding: 20px;
+
+    .product-container {
+      text-align: center;
+
+      .list-product-feature {
+        width: calc(120rem - 733px);
+        margin: auto;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+
+        .card-container {
+          background-color: #fff;
+          width: 31.33%;
+          margin-bottom: 62px;
+          transition: transform 0.6s, box-shadow 0.6s;
+          position: relative;
+          cursor: pointer;
+
+          .image {
+            img {
+              width: 100%;
+              height: 100%;
+            }
+          }
+
+          .price-box {
+            padding: 10px 10px 20px 10px;
+
+            h5 {
+              font-weight: bold;
+            }
+
+            .price-warraper {
+              span {
+                font-weight: bold;
+                font-size: 16px;
+              }
+            }
+          }
+
+          .sale-container {
+            position: absolute;
+            top: 10%;
+            left: -8px;
+            padding: 10px 7px;
+            border: #cbba9c 1px solid;
+            border-radius: 50%;
+            background-color: #cbba9c;
+            color: #fff;
+            font-weight: bold;
+            font-size: 16px;
+          }
+
+          .sale-padding {
+            padding: 10px 2px;
+          }
+
+          button {
+            background-color: #fff;
+            outline: none;
+            border: none;
+            position: absolute;
+            top: 72%;
+            left: 0;
+            opacity: 0;
+            transition: opacity 0.6s;
+          }
+
+          .cart-icon {
+            margin-left: 20px;
+            cursor: pointer;
+            position: relative;
+
+            strong {
+              padding: 0 6px;
+              border: 2px solid #cbba9c;
+              color: #cbba9c;
+            }
+
+            strong::after {
+              transition: height 0.1s ease-out;
+              bottom: 105%;
+              margin-left: -7px;
+              height: 8px;
+              width: 14px;
+              content: " ";
+              left: 50%;
+              position: absolute;
+              pointer-events: none;
+              border: 2px solid #cbba9c;
+              border-top-left-radius: 99px;
+              border-top-right-radius: 99px;
+              border-bottom: 0;
+            }
+          }
+
+          .cart-icon:hover {
+            strong {
+              background-color: #cbba9c;
+              color: #fff;
+            }
+            strong::after {
+              height: 9px;
+            }
+          }
+        }
+
+        .card-container:hover {
+          box-shadow: 0px 30px 40px 0px rgb(0 0 0 / 20%);
+          transform: translateY(-6px);
+
+          button {
+            opacity: 1;
+          }
+        }
+
+        .lỉne-through {
+          font-weight: 500 !important;
+          text-decoration: line-through;
+        }
+      }
+
+      .text-ellipsis {
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+      }
+    }
   }
 }
