--- a/src/app/main/search/search.component.scss
+++ b/src/app/main/search/search.component.scss
@@ -80,6 +80,10 @@
           font-weight: bold;
         }
       }
+
+      .not-border {
+        border-bottom: none;
+      }
     }
 
     .slider-container {
@@ -171,19 +175,23 @@
             }
           }
         }
+
+        .not-border {
+          border-bottom: none;
+        }
       }
     }
   }
 
   .right {
     width: 75%;
-    padding: 20px;
+    padding: 20px 0 20px 20px;
 
     .product-container {
       text-align: center;
 
       .list-product-feature {
-        width: calc(120rem - 733px);
+        width: 100%;
         margin: auto;
         display: flex;
         flex-wrap: wrap;
@@ -196,6 +204,7 @@
           transition: transform 0.6s, box-shadow 0.6s;
           position: relative;
           cursor: pointer;
+          border: 1px solid #ddd;
 
           .image {
             img {
@@ -241,14 +250,13 @@
             outline: none;
             border: none;
             position: absolute;
-            top: 72%;
-            left: 0;
+            top: 65%;
+            left: 15px;
             opacity: 0;
             transition: opacity 0.6s;
           }
 
           .cart-icon {
-            margin-left: 20px;
             cursor: pointer;
             position: relative;
 
@@ -287,8 +295,8 @@
         }
 
         .card-container:hover {
-          box-shadow: 0px 30px 40px 0px rgb(0 0 0 / 20%);
-          transform: translateY(-6px);
+          box-shadow: 0 3px 6px -4px rgb(0 0 0 / 16%), 0 3px 6px rgb(0 0 0 / 23%);
+          // transform: translateY(-6px);
 
           button {
             opacity: 1;
