--- a/src/app/main/home/products/products.component.html
+++ b/src/app/main/home/products/products.component.html
@@ -10,7 +10,9 @@
       <div class="sale-container" *ngIf="product.isSale" [class.sale-padding]="(product.percentSale || 0) >= 10">
         <span>-{{ product.percentSale }}%</span>
       </div>
-      <button (click)="addToCart($event, product)"><span class="cart-icon"><strong>+</strong></span></button>
+      <button (click)="addToCart($event, product)" nz-tooltip nzTooltipPlacement="top" nzTooltipTitle="Thêm vào giỏ">
+        <span class="cart-icon"><strong>+</strong></span>
+      </button>
       <div class="price-box">
         <h5 class="text-ellipsis">{{ product.name }}</h5>
         <div class="price-warraper">
