--- a/src/app/main/home/products/products.component.scss
+++ b/src/app/main/home/products/products.component.scss
@@ -81,13 +81,12 @@
         border: none;
         position: absolute;
         top: 72%;
-        left: 0;
+        left: 20px;
         opacity: 0;
         transition: opacity 0.6s;
       }
 
       .cart-icon {
-        margin-left: 20px;
         cursor: pointer;
         position: relative;
 
