--- a/src/app/main/detail/detail.component.scss
+++ b/src/app/main/detail/detail.component.scss
@@ -61,7 +61,34 @@
       }
 
       .button-add-to-cart {
+        button {
+          color: #fff;
+          text-transform: uppercase;
+          background-color: #d26e4b;
+          outline: none;
+          border: none;
+          padding: 6px 20px;
+          font-weight: bold;
+          cursor: pointer;
+          transition: all 0.6s;
+        }
 
+        button:hover {
+          color: #fff;
+          box-shadow: inset 0 0 0 100px rgba(0, 0, 0, 0.2);
+        }
+      }
+    }
+
+    .product-meta {
+      display: flex;
+      flex-direction: column;
+      padding: 30px 0;
+
+      span {
+        font-size: 16px;
+        padding: 5px;
+        border-top: 1px dotted #ddd;
       }
     }
   }
